get games request
