# src/main/java/nymil/chess/logic/controller/ChessController.java
@@ -3,8 +3,11 @@ package nymil.chess.logic.controller;
 import nymil.chess.logic.domain.ChessGame;
 import nymil.chess.logic.domain.Player;
 
+import java.util.List;
+
 public interface ChessController {
     void addGame(ChessGame gameToAdd);
     void joinGame(int gameId, Player joiningPlayer);
     ChessGame getGameById(int gameId);
+    List<ChessGame> getGames();
 }
