# src/main/java/nymil/chess/logic/controller/ChessControllerImpl.java
@@ -4,6 +4,8 @@ import nymil.chess.logic.domain.ChessGame;
 import nymil.chess.logic.domain.ChessLobby;
 import nymil.chess.logic.domain.Player;
 
+import java.util.List;
+
 public class ChessControllerImpl implements ChessController {
     ChessLobby lobby = new ChessLobby();
     @Override
@@ -20,5 +22,10 @@ public class ChessControllerImpl implements ChessController {
     @Override
     public ChessGame getGameById(int gameId) {
         return lobby.getGameById(gameId);
+    }
+
+    @Override
+    public List<ChessGame> getGames() {
+        return lobby.getGames();
     }
 }
